kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hostnames:
    - "hubble.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: hubble-ui
          port: 80
